Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  After Zope 3.3.0 (trunk only)

    New features

      - Added a master checkbox to the ZMI and toggles all other checkboxes in
        the folder listing.
      
      - added additional parameter ``settings_overrides`` to 
        zope.app.render to allow overriding of the default settings for 
        rendering rest files.

      - Added support for multiple databases in ZODB Control View.
      
      - zope.app.testing.functional.ZCMLLayer supports in-process tearDown.
        For backwards compatibility, this feature is disabled by default.
        You can enable it by passing ``allow_teardown=True`` to ``ZCMLLayer()``
        or to ``defineLayer()``.

      - zope.app.generations now guarantees the order in which schema managers
        are invoked, allowing frameworks and extensions to have a predictable
        evolution relationship.

      - Removed unused and untested SFTP code from zope.app.twisted along with
        all the SSH keys. Removed all the SSL keys also.

      - Added ``index`` keyword argument to testbrowser's ``getLink()``
        method, so that later links with a match can be accessed
        too. Example: In the ZMI doing ``getLink('Folder')`` will give you the
        "Buddy Folder" link and not the "Folder" link as expected. Use
        ``getLink('Folder', index=1)`` instead.

      - Added breadcrumbs to all types of objects visible through the
        code documentation browser.

      - Added ISkinChangedEvent to applySkin() function. This event is
        triggered whenever the skin of a request is changed.

      - Make the `label` and `hint` properties of the base Widget class
        read/write, and document in the interface that the implementation